--- a/locale/pl/carbon.cfg
+++ b/locale/pl/carbon.cfg
@@ -2,6 +2,13 @@
 graphite=Grafit
 diamond=Diament
 
+flake-graphite-patch=Ruda __ITEM__flake-graphite__
+flake-graphite-patch-chunk=Kawałek __ENTITY__flake-graphite-patch__
+flake-graphite-patch-ore=Ruda __ENTITY__flake-graphite-patch__
+rough-diamond-patch=Ruda __ITEM__rough-diamond__
+rough-diamond-patch-chunk=Kawałek __ENTITY__rough-diamond-patch__
+rough-diamond-patch-ore=Ruda __ENTITY__rough-diamond-patch__
+
 [autoplace-control-names]
 graphite=[item=flake-graphite] Grafit
 diamond=[item=rough-diamond] Diament
@@ -11,7 +18,6 @@ flake-graphite=Płatki grafitu
 rough-diamond=Nieoszlifowany diament
 graphite=Grafit
 graphite-dust=Pył grafitowy
-enriched-lead=Wzbogacony ołów
 compressed-graphite=Skompresowany grafit
 
 diamond=Diament
@@ -20,6 +26,12 @@ fullerenes=Fullereny
 nanotubes=Nanorurki
 carbon-black=Sadza węglowa
 crucible=Tygiel
+
+carbon-fiber=Włókno węglowe
+polyacrylonitrile=Poliakrylonitryl
+
+vtk-deepcore-mining-flake-graphite-chunk=Kawałek __ITEM__flake-graphite__
+vtk-deepcore-mining-rough-diamond-chunk=Kawałek __ITEM__rough-diamond__
 
 [item-description]
 flake-graphite=Można przetworzyć na grafit
@@ -34,6 +46,8 @@ fullerenes=Fullereny
 nanotubes=Nanorurki węglowe
 flake-graphite-synthesis=Synteza grafitu
 carbon-matter-processing=Przetwarzanie węgla pierwiastkowego
+enriched-graphite=Wzbogacanie grafitu
+carbon-fiber=__ITEM__carbon-fiber__
 
 [technology-description]
 graphite-processing=Przetwarzanie płatków grafitu w grafit użytkowy
@@ -43,17 +57,27 @@ fullerenes=Izolacja fulerenów poprzez wygrzewanie węgla
 nanotubes=Przydatny zaawansowany materiał
 
 [recipe-name]
-graphite=Grafit
-graphite-dust=Pył grafitowy
-synthetic-diamond=Syntetyczny diament
-diamond-processing=Przetwarzanie diamentów
-graphene=Grafen
-heavy-water-graphene=[fluid=heavy-water] z grafenem
-fullerenes=Fullereny
-nanotubes=Nanorurki
-carbon-black=Sadza węglowa
-graphite-carbon-black=Grafit z sadzy węglowej
-nanomaterial-nanotubes=Nanomateriał z nanorurek
+graphite=__ITEM__graphite__
+graphite-dust=__ITEM__graphite-dust__
+synthetic-diamond=__ITEM__diamond__
+diamond-processing=__ITEM__diamond__
+graphene=__ITEM__graphene__
+heavy-water-graphene=[fluid=heavy-water] z __ITEM__graphene__
+fullerenes=__ITEM__fullerenes__
+nanotubes=__ITEM__nanotubes__
+carbon-black=__ITEM__carbon-black__
+graphite-carbon-black=__ITEM__graphite__ z __ITEM__carbon-black__
+nanomaterial-nanotubes=__ITEM__se-nanomaterial__ z __ITEM__nanotubes__
+low-density-structure=__ITEM__low-density-structure__
+low-density-structure-RS=__ITEM__low-density-structure__
+low-density-structure-nanotubes=__ITEM__low-density-structure__
+se-low-density-structure-beryllium=__ITEM__low-density-structure__
+dirty-water-filtration-graphite=Filtr brudnej wody [item=flake-graphite]
+
+vtk-deepcore-mining-ore-chunk-refining-graphite-focus=__ITEM__graphite__ ukierunkowane przetwarzanie rudy
+vtk-deepcore-mining-ore-chunk-refining-diamond-focus=__ITEM__diamond__ ukierunkowane przetwarzanie rudy
+vtk-deepcore-mining-graphite-chunk-refining=__ITEM__flake-graphite__ przetwarzanie rudy
+vtk-deepcore-mining-diamond-chunk-refining=__ITEM__rough-diamond__ przetwarzanie rudy
 
 [recipe-description]
 graphite-carbon-black=Zamienia nadmiar sadzy na grafit w niskim stosunku.
@@ -66,10 +90,18 @@ bzcarbon-list=Utwórz listę zmodyfikowanych receptur
 bzcarbon-enable-fullerenes=Włącz fullereny i nanorurki
 bzcarbon-enable-carbon-black=Włącz sadzę węglową
 bzcarbon-enable-rough-diamond=Włącz wydobycie diamentów
+bzcarbon-reuse=Użyj ponownie żwiru szlifierskiego
+bzcarbon-enable-carbon-fiber=Włącz włókna węglowe
 
 [mod-setting-description]
 bzcarbon-recipe-bypass=Pomiń modyfikację tych receptur (lista oddzielona przecinkami).
 bzcarbon-list=Jeśli włączone, komenda tekstowa [color=orange]BZList[/color] zrzuci plik do katalogu script-output z pełną listą zmodyfikowanych receptur. \nZaleca się wyłączenie tego po zakończeniu konfiguracji innych ustawień.
-bzcarbon-enable=Włącz półprodukty fullerenów i nanorurek.\nFullereny są używane głównie w rzeczach związanych z biologią. Nanorurki do budowy struktur.
+bzcarbon-enable-fullerenes=Włącz półprodukty fullerenów i nanorurek.\nFullereny są używane głównie w rzeczach związanych z biologią. Nanorurki do budowy struktur.
 bzcarbon-enable-carbon-black=Uaktywnij produkt uboczny sadzę. Głównie używany do produkcji tworzyw sztucznych.
 bzcarbon-enable-rough-diamond=Włącza rudy diamentu dla nowych gier.
+bzcarbon-enable-flake-graphite=Włącza grafitowe złoża rudy. Zaleca się pozostawienie tej opcji włączonej. Wyłączenie spowoduje usunięcie istniejących złóż rudy.
+bzcarbon-reuse=Możliwość ponownego użycia diamentowego żwiru szlifierskiego w recepturach takich jak LDS. Bardziej skomplikowane, ale oszczędza zasoby.
+bzcarbon-enable-carbon-fiber=Dostępne tylko, gdy aktywne są Sól i Chlor.
+
+[string-mod-setting]
+bzcarbon-enable-flake-graphite-yes=tak - zalecane
